force-app/main/default/objects/CampaignMember/fields/CW_AccountOwnerID__c.field-meta.xml
<CustomField>
    <fullName>CW_AccountOwnerID__c</fullName>
    <formula>Contact.Account.CW_OwnerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>得意先所有者_CW</label>
    <type>Text</type>
</CustomField>