force-app/main/default/objects/CampaignMember/fields/DX_AccountOwnerID__c.field-meta.xml
<CustomField>
    <fullName>DX_AccountOwnerID__c</fullName>
    <formula>Contact.Account.DX_OwnerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>得意先所有者_DX</label>
    <type>Text</type>
</CustomField>