force-app/main/default/objects/CampaignMember/fields/JU_AccountOwnerID__c.field-meta.xml
<CustomField>
    <fullName>JU_AccountOwnerID__c</fullName>
    <formula>Contact.Account.JU_OwnerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>得意先所有者_JU</label>
    <type>Text</type>
</CustomField>